# neighpy

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  README.md  pyproject.toml
.github/workflows/: publish.yaml  tests.yaml
docs/source/: api.rst  conf.py  contributing.rst  examples.rst  getstarted.rst  index.rst  search.rst
docs/source/examples/: rosenbrock.ipynb
docs/source/modulesrst/: appraise.rst  search_.rst
examples/: receiverfunction.ipynb  regression.ipynb  rosenbrock.ipynb
napy/: __init__.py  _mcintegrals.py  _voronoi.py  appraise.py  napy.py  search.py
neighpy/: __init__.py  _version.py  appraise.py  search.py
tests/: test__mcintegrals.py  test_appraise.py  test_napy.py  test_search.py
