[tool.poetry]
name = "napy"
version = "0.1.0"
description = ""
authors = ["auggiemarignier <augustin.marignier@anu.edu.au>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.3"
scipy = "^1.12.0"
joblib = "^1.3.2"
tqdm = "^4.66.1"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.0"
matplotlib = "^3.8.2"
shapely = "^2.0.2"
pytest-cov = "^4.1.0"
types-tqdm = "^4.66.0.20240106"


[tool.poetry.group.examples.dependencies]
jupyter = "^1.0.0"
matplotlib = "^3.8.2"


[tool.poetry.group.docs.dependencies]
sphinx = "^7.2.6"
sphinx-book-theme = "^1.1.2"
myst-nb = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
