[tool.poetry]
name = "neighpy"
version = "0.0.0"
description = "Neighbourhood Algorithm in Python"
authors = ["auggiemarignier <augustin.marignier@anu.edu.au>"]
homepage = "https://github.com/auggiemarignier/neighpy"
repository = "https://github.com/auggiemarignier/neighpy"
license = "GPL-3.0-or-later"
documentation = "https://neighpy.readthedocs.io/en/latest/index.html"
readme = "README.md"
include = ["neighpy/_version.py"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = ">=1.22"
joblib = "^1.3.2"
tqdm = "^4.66.2"


[tool.poetry.group.dev.dependencies]
pre-commit = ">=3.0.0"
matplotlib = ">=3.5"
shapely = "^2.0.2"
pytest-cov = "^4.1.0"
types-tqdm = "^4.66.0.20240106"
scipy = ">=1.8"
pytest-rerunfailures = "^13.0"

[tool.poetry.group.examples]
optional = true

[tool.poetry.group.examples.dependencies]
matplotlib = ">=3.5"
scipy = ">=1.8"
jupyter = "^1.0.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "<6"
sphinx-book-theme = ">1.0.0"
myst-nb = "0.17.2"

[tool.poetry-dynamic-versioning]
enable = true

[tool.poetry-dynamic-versioning.substitution]
files = ["neighpy/_version.py"]

[tool.poetry-dynamic-versioning.files."neighpy/_version.py"]
persistent-substitution = true
initial-content = """
  # These version placeholders will be replaced later during substitution.
  __version__ = "0.0.0"
  __version_tuple__ = (0, 0, 0)
"""

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"
